--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,143 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+nav {
+  text-align: right;
+}
+
+.background {
+  margin: 0;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+  position: fixed;
+}
+
+main {
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+}
+
+.home {
+  color: rgb(255, 255, 255);
+}
+
+.tile {
+  text-align: center;
+  width: 60%;
+  margin: 10vh auto 0 auto;
+}
+
+.tile-title {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.title, .description, .learn-more {
+  font-family: 'Bubblegum Sans', cursive;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.title {
+  margin: 0;
+  font-size: 70px;
+}
+
+.description {
+  font-size: 40px;
+  text-overflow: inherit;
+}
+
+.buttons {
+  background: transparent;
+  height: 20px;
+  width: 20px;
+  border: 3px solid white;
+  border-radius: 50%;
+  margin: 5px;
+}
+
+.fill-center {
+  background-color: white;
+}
+
+.buttons:hover, .learn-more:hover {
+  background-color: white;
+}
+
+.button-group {
+  text-align: center;
+  position: fixed;
+  bottom: 15vh;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.learn-more {
+  font-size: 24px;
+  padding: 15px 10px;
+  background-color: white;
+  text-decoration-color: transparent;
+  border-radius: 30px;
+  border: 4px solid white;
+}
+
+.learn-more:hover {
+  /* color: transparent */
+}
+
+@media only screen and (max-width: 1029px) {
+  .description {
+    font-size: 50px;
+  }
+  .title {
+    font-size: 70px;
+  }
+  .tile {
+    width: 80%;
+    margin: 15vh auto 0 auto;
+  }
+  .learn-more {
+    font-size: 20px;
+    padding: 10px 7px;
+  }
+}
+@media only screen and (max-width: 769px) {
+  .description {
+    font-size: 40px;
+  }
+  .title {
+    font-size: 60px;
+  }
+  .tile {
+    width: 90%;
+    margin: 15vh auto 0 auto;
+  }
+  .learn-more {
+    font-size: 20px;
+    padding: 10px 7px;
+  }
+}
+@media only screen and (max-width: 420px) {
+  
+  .description {
+    font-size: 24px;
+  }
+  .title {
+    font-size: 40px;
+  }
+  .tile {
+    width: 95%;
+    margin: 20vh auto 0 auto;
+  }
+  .learn-more {
+    font-size: 14px;
+    padding: 8px 6px;
+  }
+}
