--- a/src/index.css
+++ b/src/index.css
@@ -110,6 +110,16 @@ main {
   border: 4px solid white;
 }
 
+.tile-description {
+  margin: 80px 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.tile-description > h3 {
+  margin: 0 4px;
+}
+
 @media only screen and (max-width: 1029px) {
   .description {
     font-size: 50px;
