Working on single project display

--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,7 @@ nav > span {
   background-color: #64b828;
   width: 100%;
   height: auto;
+  min-height: 100vh;
 }
 
 .portfolio > main {
@@ -196,6 +197,31 @@ nav > span {
 }
 
 .change-cursor {
+  cursor: pointer;
+}
+
+.main-project {
+  margin-top: 20px;
+  width: 80%;
+}
+
+.buttons-change-project {
+  text-align: right;
+
+}
+
+.buttons-change-project > button {
+  border-radius: 50%;
+  height: 60px;
+  width: 60px;
+  border: 5px solid white;
+  color: white;
+  background-color: transparent;
+  font-size: 30px;
+  margin: 0 10px;
+}
+
+.buttons-change-project > button:hover {
   cursor: pointer;
 }
 
