Made the portfolio and experience pages responsive

--- a/src/index.css
+++ b/src/index.css
@@ -303,6 +303,7 @@ nav > span {
 }
 .exp-main > div > h2 {
   font-size: 40px;
+  margin: 15px 0;
 }
 
 .example-card {
@@ -329,7 +330,7 @@ nav > span {
 }
 
 .example-card > h2 {
-  font-size: 20px;
+  font-size: 16px;
   color: #233233C9;
 }
 
@@ -343,6 +344,16 @@ nav > span {
   text-transform: none;
   /* font-weight: 600; */
   font-family: sans-serif
+}
+
+@media only screen and (max-width: 1320px) {
+  .project-single-display > div > img {
+    max-width: 600px;
+  }
+  .example-card {
+    height: auto;
+    width: 400px;
+  }
 }
 
 @media only screen and (max-width: 1029px) {
@@ -376,7 +387,25 @@ nav > span {
     height: 250px;
     width: 350px;
   }
+  .project-single-display > div > img {
+    max-width: 500px;
+  }
+  .project-single-display {
+    flex-direction: column;
+    align-items: center;
+  }
+  .example-card {
+    height: auto;
+    width: 350px;
+  }
+  .exp-main > div > h1 {
+    font-size: 60px;
+  }
+  .exp-main > div > h2 {
+    font-size: 30px;
+  }
 }
+
 @media only screen and (max-width: 769px) {
   .description {
     font-size: 40px;
@@ -407,6 +436,14 @@ nav > span {
   .crop {
     height: 200px;
     width: 300px;
+  }
+  .project-single-display > div > img {
+    max-width: 300px;
+  }
+  .exp-main {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
   }
 }
 @media only screen and (max-width: 420px) {
@@ -439,6 +476,13 @@ nav > span {
   }
   .crop {
     height: 150px;
+    width: 250px;
+  }
+  .project-single-display > div > img {
+    max-width: 250px;
+  }
+  .example-card {
+    height: auto;
     width: 250px;
   }
 }
